<resources>
    <string name="app_name">MadbrainsAndroidCourse</string>

    <!-- Login screen -->
    <string name="name_field">Name</string>
    <string name="password_field">Password</string>
    <string name="enter_button_text">Enter</string>
    <string name="login_text">Login into your GitHub account</string>
    <string name="logo_description">app logo</string>
    <string name="title_activity_repositories">RepositoriesActivity</string>
    <string name="remember_me">Remember me</string>

    <!-- Repositories screen -->
    <string name="logout">Logout</string>
    <string name="loading">Loading. Please wait</string>
    <string name="tab_all">Repositories</string>
    <string name="tab_favourite">Favourite</string>
    <string name="swipe_info">swipe right to add to favourite</string>

    <!-- RepositoriesDetails screen -->
    <string name="add_to_favourite">Add to favourite</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="back">Back</string>
    <string name="repository_full_name">repository_full_name</string>
    <string name="last_ten_commits">Last commits:</string>
    <string name="url">Url: </string>

</resources>