<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailsActivity">


    <Button
        android:id="@+id/buttonSwitchFavouriteId"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerCommitsId" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repositoryInfoLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/recycle_view_border"
        android:elevation="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/repositoryInfoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/authorInfoLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/repositoryNameId"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/repositoryDescriptionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/repositoryStatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/authorInfoLayout"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageForks"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:baselineAlignBottom="false"
                app:srcCompat="@android:drawable/ic_menu_directions"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/forksNumberId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageStars"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/star_off"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/starsNumberId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/authorInfoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:elevation="5dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/authorNameId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="end" />

            <ImageView
                android:id="@+id/authorAvatarId"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="visible"
                tools:ignore="ContentDescription"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

        <TextView
            android:id="@+id/languageId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/repositoryStatsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repositoryInfoLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCommitsId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSwitchFavouriteId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/last_ten_commits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryInfoLayoutId" />

    <TextView
        android:id="@+id/textViewUrlId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:autoLink="web"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/repositoryInfoLayoutId" />

</androidx.constraintlayout.widget.ConstraintLayout>